feat: Add anotation doc, test and update properties. SONAR is OK.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,12 +5,11 @@ spring.datasource.password=password
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.properties.hibernate.ddl-auto=create-drop
 spring.jpa.properties.hibernate.format_sql=true
-spring.sql.init.data-locations=classpath:/sql/data.sql
 spring.h2.console.enabled=true
+spring.jpa.properties.hibernate.hbm2ddl.import_files=/sql/data.sql
 spring.h2.console.path=/console/
 spring.h2.console.settings.web-allow-others=true
 spring.mvc.pathmatch.matching-strategy=ANT_PATH_MATCHER
-
 #LOGS
 spring.jpa.show-sql=true
 debug=true
